# moldo

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: api.md  cli.md  getting-started.md  index.md  protocol.md  runtime.md
docs/molds/: creating-molds.md  index.md  manifest.md
mold-template/: README.md  moldo.json  requirements.txt
mold-template/mymold/: __init__.py
moldo/: __init__.py  cli.py  runtime.py
moldo/api/: server.py
moldo/core/: MoldoLexer.interp  MoldoParser.interp  MoldoParser.tokens  __init__.py  compiler.py  interpreter.py  mold_registry.py
moldo/installed/converter/: converter.py  moldo.json
moldo/installed/mathex/: mathex.py  moldo.json
moldo/installed/stringer/: moldo.json  stringer.py
moldo/molds/collections/: moldo.json
moldo/molds/control/: moldo.json
moldo/molds/functions/: moldo.json
moldo/molds/io/: moldo.json
moldo/molds/math/: moldo.json
moldo/molds/text/: moldo.json
moldo/molds/variables/: moldo.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/cli/: index.html
site/getting-started/: index.html
site/molds/: index.html
site/molds/creating-molds/: index.html
site/molds/manifest/: index.html
site/protocol/: index.html
site/runtime/: index.html
site/search/: search_index.json
snippets/: README.md  cnr.py  counter.moldo  dict.moldo  hello.moldo  hello_world.moldo  if_else_demo.moldo  loop.moldo  loop_test.moldo  name_input.moldo  nloop.moldo  str.moldo  strec.moldo  temp.moldo  temperature_converter.moldo  tr.moldo
